Tue Sep  1 16:44:06 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* c_main.c: renamed c.c to c_main.c

Tue Jul 28 11:30:43 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* renamed gsl_fft_signals.h to fft_signals.h (not exported)

	* fft.h: a place to keep some local macros

	* c.c: renamed complex.c to c.c

Mon Jul 27 12:46:25 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* bitreverse.c: removed gsl_ftt_ prefix from non-exported functions

Wed Jun 10 17:36:01 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c: Eliminated the need for getopt

	* test_radix2.c: Eliminated the need for getopt

	* test_trap.c: Eliminated the need for getopt

Mon Apr 27 18:48:58 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* fft_alloc functions now return a pointer to a newly allocated
 	wavetable struct (or a null pointer if there isn't enough memory)

Fri Apr 10 15:12:37 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* renamed complex_*.c and halfcomplex_*.c to c_*.c and hc_*.c to
 	avoid linker complaints about long filenames on some platforms

Sun Mar 29 15:56:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* To be compatible with other architectures use size_t everywhere
 	instead of unsigned int

Sat Mar 21 17:28:26 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* factorize.c (gsl_fft_factorize): Stopped returning the sum of
 	factors in the status variable. The user can compute it if
 	necessary.

1998-01-27  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am: fixed a typo: removed trailing \ at the end of this file.
	