@@ -63,3 +63,53 @@ FUNCTION(compare_complex,results) (const char *name_a, const BASE a[],
 
   return -1;
 }
+
+
+int
+FUNCTION(compare_real,results) (const char *name_a, const BASE a[],
+				const char *name_b, const BASE b[],
+				size_t stride, size_t n,
+				const double allowed_ticks)
+{
+  size_t i;
+  double ticks, max_ticks = 0;
+  double dr;
+  const char *flag;
+
+  for (i = 0; i < n; i++)
+    {
+      dr = b[stride*i] - a[stride*i];
+      ticks = fabs (dr) / BASE_EPSILON;
+      if (ticks > max_ticks)
+	{
+	  max_ticks = ticks;
+	}
+    }
+
+  if (max_ticks < allowed_ticks)
+    {
+      return 0;
+    }
+
+  printf ("\n%s vs %s : max_ticks = %f\n", name_a, name_b, max_ticks);
+
+  for (i = 0; i < n; i++)
+    {
+      dr = b[stride*i] - a[stride*i];
+      ticks = fabs (dr) / BASE_EPSILON;
+
+      if (ticks > 1000)
+	{
+	  flag = "***";
+	}
+      else
+	{
+	  flag = "";
+	}
+
+      printf ("%15s: %d  %.16f %s\n", name_a, i, a[stride*i], flag);
+      printf ("%15s: %d  %.16f %e %s\n", name_b, i, b[stride*i], ticks, flag);
+    }
+
+  return -1;
+}
