@@ -54,7 +54,22 @@ main (int argc, char *argv[])
       end = n ;
     }
 
-  for (i = start ; i < end + 1; i++) 
+
+  for (i = 1 ; i <= end ; i *= 2) 
+    {
+      if (i >= start) 
+	{
+	  for (stride = 1 ; stride < 4 ; stride++)
+	    {
+	      test_complex_bitreverse_order (stride, i) ;
+	      test_complex_radix2 (stride, i) ;
+	      test_real_bitreverse_order (stride, i) ;
+	      test_real_radix2 (stride, i) ;
+	    }
+	}
+    }
+
+  for (i = start ; i <= end ; i++) 
     {
       for (stride = 1 ; stride < 4 ; stride++)
 	{
